test/Common/standalone/InvalidEhFrame/Inputs/invalid-eh-frame2.s
.section .eh_frame, "a"
.align 1
  .byte 0x08
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x01
  .byte 0x01
  .byte 0x01
  .byte 0x01
